--- a/frontend-claaran/src/app/auth/login/login.component.html
+++ b/frontend-claaran/src/app/auth/login/login.component.html
@@ -9,15 +9,15 @@
             <p class="font">
               Estamos para acompañarte y asegurarnos que no tengas ningún incoveniente con el uso de nuestros sistema. Queremos brindarte una experiencia excepcional desde el primer momento en que ingreses
             </p>
-            <form action="login.html" class="formulario">
+            <form class="formulario">
             <div class="campo">
                 <input type="text" placeholder="Usuario">
             </div>
             <div class="campo">
                 <input type="text" placeholder="Contraseña">
             </div>
-              <div class="campo button">
-                <button type="submit"><a id="link-enviar" href="wep-app.html">Enviar</a></button>   
+              <div class="campo button" >
+                <button type="submit"><a id="link-enviar" routerLink="/administration/creacionref">Enviar</a></button>   
               </div>    
             </form>
           </div>
