--- a/frontend-claaran/src/app/website/components/shared/navbar/navbar.component.html
+++ b/frontend-claaran/src/app/website/components/shared/navbar/navbar.component.html
@@ -11,7 +11,8 @@
               <li class="menu-item"><a href="#about">Acerca de Nosotros</a>
 
               </li>
-              <li class="menu-item"><a href="#servicios">Servicios</a></li>
+              <!-- <li class="menu-item"><a href="#servicios">Servicios</a></li> -->
+              <li class="menu-item"><a routerLink="/login">Servicios</a></li>
             </ul>
           </nav>
         </div>
