--- a/frontend-claaran/src/app/administration/components/creacion-de-referencias/creacion-de-referencias.component.css
+++ b/frontend-claaran/src/app/administration/components/creacion-de-referencias/creacion-de-referencias.component.css
@@ -7,7 +7,7 @@
 }
 h3{
   text-align: center;  
-  font-size:large ;
+  font-size:small ;
 }
 
 .titulo {
@@ -27,7 +27,6 @@ h3{
 }
 
 label {
-
     display: block;
 }
 
