--- a/frontend-claaran/src/app/website/components/login/login.component.html
+++ b/frontend-claaran/src/app/website/components/login/login.component.html
@@ -17,7 +17,7 @@
             (ngSubmit)="onSubmit()"
           >
           <div class="campo">
-              <input type="text" placeholder="Usuario" formControlName="usuario">
+              <input type="text" placeholder="Usuario" formControlName="username">
               <div class="error">
                 <div
                   *ngIf="loginForm.get( 'usuario' )?.invalid && ( loginForm.get( 'usuario' )?.dirty || loginForm.get( 'usuario' )?.touched )"
@@ -27,7 +27,7 @@
               </div>
           </div>
           <div class="campo">
-              <input type="password" placeholder="Contraseña" formControlName="contrasena">
+              <input type="password" placeholder="Contraseña" formControlName="password">
               <div class="error">
                 <div
                   *ngIf="loginForm.get( 'contrasena' )?.invalid && ( loginForm.get( 'contrasena' )?.dirty || loginForm.get( 'contrasena' )?.touched )"
