--- a/frontend-claaran/src/app/website/pages/home/home.component.html
+++ b/frontend-claaran/src/app/website/pages/home/home.component.html
@@ -1,3 +1,3 @@
-<app-header></app-header>
+<!-- <app-header></app-header>
 <app-about-us></app-about-us>
-<app-services></app-services>
+<app-services></app-services> -->
