--- a/frontend-claaran/src/app/components/layout/footer/footer.component.html
+++ b/frontend-claaran/src/app/components/layout/footer/footer.component.html
@@ -1,5 +1,5 @@
 <form class="footer"
-[formGroup]="footerForm"
+  [formGroup]="footerForm"
 >
     <div class="contenedor">
         <div class="container__contact">
@@ -8,7 +8,7 @@
             </p>
             <div class="container__info">
                 <p>
-                    CLAARAN 
+                    CLAARAN
                 </p>
                 <p>
                     Av. cra 86 # 55A - 75 Ofi. 106  <br>
@@ -42,12 +42,12 @@
                     <label for="name">Nombre</label>
                     <input type="text"  form id="name" formControlName="nombre">
                 </div>
-                
+
                 <div class="container__input">
                     <label for="phone">Telefono</label>
                     <input type="text"  form id="phone" formControlName="telefono">
                 </div>
-                
+
                 <div class="container__input">
                     <label for="email">E-mail</label>
                     <input class="cont  formainer__input" type="text" id="email" formControlName="email">
@@ -58,7 +58,7 @@
                     </button>
                 </div>
 
-            </form>f
+            </form>
 
         </div>
 
