--- a/frontend-claaran/src/app/admin/pages/references-creation/references-creation.component.css
+++ b/frontend-claaran/src/app/admin/pages/references-creation/references-creation.component.css
@@ -1,9 +1,11 @@
 
 .contenedor{
-  width: 40%;
-  margin: 0 auto;
+  width: 100%;
+  margin: .2;
+  padding: 0;
   display: block;
-
+  text-align: center;  
+  background-color: white;
 }
 h3{
 text-align: center;
